﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version 1.2.2.10128 (1.2.2) 2010-05-08
	General description:
		This release fixes a single bug in the MailLoggingProvider. The bug prevented the provider from 
		logging when either the message or the source of the LogEntry contained a new line character.
	
	Bug fixes:
		-A bug in the MailLoggingProvider prevented the provider from logging (thus sending a mail) when 
		 either the message or the source of the LogEntry contained a new line character. This is fixed by 
		 removing new line characters from message and source when bulding the mail subject and by validating 
		 during initialization whether the subjectFormatString contains a new line character. Work item 6078.


Version 1.2.1.10097 (1.2.1) 2010-04-07
	General description:
		The 1.2.0.10042 contained a critical bug that caused loading of the library to fail in a web 
		environment.
	
	Bug fixes:
		-Library could not be used in web environment. ArgumentException with message "exePath must be 
		specified when not running inside a stand alone exe" was thrown.
		 
	Code changes:
		-Reevaluated the use of FxCop and fixed some by FxCop reported issues in the code or added the 
		 SuppressMessageAttribute to the code. Originally these excludes were added in the FxCop file, but 
		 adding the attributes to code is more maintainable and discoverable.


Version 1.2.0.10042 (1.2) 2010-02-11
	General description:
		This release has one small bug fix and several new features. The biggest new features are the ability
		to use an alternatively named configuration section and the addition of the TerminatorLoggingProvider
		and CompositeLoggingProvider.
	
	Bug fixes:
		-Exception message contained invalid example configuration.
		 The exception thrown in the situation where the <logging> section was missing or didn't contain a
		 'defaultProvider' attribute, contained an example configuration that was invalid. The <providers>
		 tag was missing.
	